--- a/pom.xml
+++ b/pom.xml
@@ -89,5 +89,10 @@
             <version>1.21.4-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>de.jonahd345</groupId>
+            <artifactId>xenfororesourcemanagerapi</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 </project>
